--- a/chat-app-fs/src/app/globals.css
+++ b/chat-app-fs/src/app/globals.css
@@ -106,13 +106,13 @@ a {
   }
 }
 
-
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Arial, sans-serif;
   color: #555;
+  background-color: #000;
 }
 
 main {
