--- a/chat-app-fs/src/app/page.module.css
+++ b/chat-app-fs/src/app/page.module.css
@@ -84,7 +84,19 @@
 }
 
 .userList {
-  margin-top: 10px;
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  overflow-y: auto;
+  max-height: 150px;
 }
 
 .activity {
@@ -115,4 +127,21 @@
 
 .messageText {
   margin-left: 10px;
+}
+
+.toggleButton {
+  font-size: 1rem;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #7100f3d9;
+  color: white;
+  cursor: pointer;
+  width: 120px;
+  height: 50px;
+  margin: 30px 0 15px 0;
+}
+
+.toggleButton:hover {
+  background-color: #2a0256f3;
 }
