--- a/chat-app-fs/src/app/page.module.css
+++ b/chat-app-fs/src/app/page.module.css
@@ -145,3 +145,21 @@
 .toggleButton:hover {
   background-color: #2a0256f3;
 }
+
+.slBtn {
+  color: #000;
+  background-color: #a5fba596;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.slBtn:hover {
+  background-color: #1c721c;
+  color: #fff;
+}
