--- a/chat-app-fs/src/app/page.module.css
+++ b/chat-app-fs/src/app/page.module.css
@@ -28,7 +28,7 @@
   color: white;
 }
 
-.form-container {
+.formContainer {
   background: white;
   padding: 40px 20px;
   border-radius: 8px;
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .input {
@@ -46,6 +47,7 @@
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .button {
@@ -62,6 +64,13 @@
 
 .button:hover {
   background-color: #0d8cd9;
+}
+
+.error {
+  color: red;
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
 }
 
 .socialButton {
@@ -229,4 +238,107 @@
 
 .slBtn:hover {
   background-color: #555;
+}
+
+.chatList {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+  max-width: 400px;
+  margin-top: 20px;
+}
+
+.chatItem {
+  list-style-type: none;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #333333;
+  color: #ffffff;
+  border-radius: 5px;
+}
+
+.chatItem button {
+  width: 100%;
+  background-color: #1da1f2;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.chatItem button:hover {
+  background-color: #1991da;
+}
+
+.profileContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profileHeader {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.profileForm {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
+.profileField {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.label {
+  flex: 1;
+  font-weight: bold;
+}
+
+.profileText {
+  flex: 2;
+  margin-right: 1rem;
+}
+
+.input {
+  flex: 3;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.profileImage {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.button {
+  padding: 0.75rem;
+  background-color: #1da1f2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.button:hover {
+  background-color: #0d8cd9;
+}
+
+.error {
+  color: red;
+  margin-top: 1rem;
+}
+
+.success {
+  color: green;
+  margin-top: 1rem;
 }
